2004-05-04  Mike Kestner  <mkestner@ximian.com>

	* configure.in : require gtkhtml-3.0.10 so we can use a single
	so version (.4).
	* sources/* : update to gtkhtml-3.0.10.  This produces zero change
	in the generated API.

2004-05-03  Todd Berman  <tberman@sevenl.net>

	* */*.pc.in: change to use @PACKAGE@ where its needed, fixes pc bug

2004-05-03  Todd Berman  <tberman@sevenl.net>

	* configure.in: bump mono dep to 0.90

2004-05-03  Todd Berman  <tberman@sevenl.net>

	* configure.in: bump to 0.91, dont kill me mike.

2004-05-03  Todd Berman  <tberman@sevenl.net>

	* gtk-sharp.pc.in: add PACKAGE stuff here

2004-05-03  Mike Kestner  <mkestner@ximian.com>

	* */Makefile.am : fix gacutil for new package switch
	* */*.pc.in : fix -libs var for new dll path

2004-05-03  Mike Kestner  <mkestner@ximian.com>

	* configure.in : add some checks for gtkhtml-3.1 and use it if avail.
	* gtkhtml/gtkhtml-sharp.dll.config.in : deal with 3.1 versioning.

2004-05-03  Miguel de Icaza  <miguel@ximian.com>

	* gtkhtml/Gtk.metadata: Patch from Mike Kestner: make
	GtkHTMLStream opaque, to fix a bug that was found by running
	Monodoc on MacOS X.  We were passing a pointer to a managed
	object, instead of a pointer to a HTMLStream-allocated object.

	* HTMLStream.custom: Update custom file to reflect change to
	Opaque: use Handle instead of this.

2004-04-30  Mike Kestner  <mkestner@ximian.com>

	* gdk/glue/makefile.win32 : remove windowmanager.o for now. It
	was breaking the build on win32.

2004-04-30  Mike Kestner  <mkestner@ximian.com>

	* configure.in : lookup gacutil and error out if not found.
	* */Makefile.am : add install-data-local and uninstall-local targets
	for GAC installation.  Add gtk-sharp.pub target to cp the key in for
	distcheck.
	* */AssemblyInfo.cs.in : remove ../ from key path for VPATH build.

2004-04-30  Mike Kestner  <mkestner@ximian.com>

	* configure.in : remove BASE_DEPENDENCIES LIBS and CFLAGS and
	expose more specific versions for glue building.