@@ -2,7 +2,7 @@
 AC_INIT(README)
 AC_CANONICAL_SYSTEM
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(gtk-sharp, 0.91)
+AM_INIT_AUTOMAKE(gtk-sharp, 0.91.1)
 AM_MAINTAINER_MODE
 
 API_VERSION=1.0.0.0
@@ -160,10 +160,11 @@ if test "x$enable_gtkhtml" = "xyes"; then
 	GTKHTML_VERSION=3.0
 	GTKHTML_SOVERSION=4
 else
+	GTKHTML_REQUIRED_VERSION=3.1.12
 	PKG_CHECK_MODULES(GTKHTML_DEPENDENCIES, libgtkhtml-3.1 >= $GTKHTML_REQUIRED_VERSION, enable_gtkhtml=yes, enable_gtkhtml=no)
 	if test "x$enable_gtkhtml" = "xyes"; then
 		GTKHTML_VERSION=3.1
-		GTKHTML_SOVERSION=4
+		GTKHTML_SOVERSION=7
 	else
 		GTKHTML_VERSION=
 		GTKHTML_SOVERSION=
