@@ -1,3 +1,8 @@
+2004-05-05  Mike Kestner  <mkestner@ximian.com>
+
+	* configure.in : fix gtkhtml versioning *again*.
+	* sample/gconf/Makefile.am : conditional build on ENABLE_GNOME.
+
 2004-05-04  Mike Kestner  <mkestner@ximian.com>
 
 	* configure.in : require gtkhtml-3.0.10 so we can use a single
